# NoRisk-Client-Launcher-Cracked

./: .gitignore  README.md  index.html  log-window.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cursor/rules/: noriskclient-launcher.mdc  toast-rule.mdc
.github/workflows/: build.yml
contrib/: gg.norisk.NoRiskClientLauncherV3.desktop  gg.norisk.NoRiskClientLauncherV3.metainfo.xml
mock-data/noriskclient/: 1.21.4-dev-config.json  1.21.5-config.json  norisk_modpacks.json  norisk_versions.json
src/: App.tsx  logWindowEntry.tsx  main.tsx  updaterEntry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: cape_command.rs  content_command.rs  file_command.rs  flagsmith_commands.rs  minecraft_auth_command.rs  minecraft_command.rs  mod.rs  modrinth_commands.rs  nrc_commands.rs  path_commands.rs  process_command.rs  profile_command.rs
src-tauri/src/integrations/: mod.rs  modrinth.rs  mrpack.rs  norisk_packs.rs  norisk_versions.rs
src-tauri/src/minecraft/: installer.rs
src-tauri/src/minecraft/api/: cape_api.rs  mc_api.rs  mclogs_api.rs  mod.rs  neo_forge_api.rs  norisk_api.rs  wordpress_api.rs
src-tauri/src/minecraft/auth/: minecraft_auth.rs
src-tauri/src/minecraft/downloads/: forge_libraries_download.rs  logging_config_download.rs  mc_assets_download.rs  mc_natives_download.rs  mod.rs  mod_downloader.rs  mod_resolver.rs  neo_forge_installer_download.rs  norisk_assets_download.rs  norisk_pack_downloader.rs
src-tauri/src/minecraft/dto/: forge_maven_meta.rs  mod.rs  neo_forge_maven_meta.rs  norisk_meta.rs
src-tauri/src/minecraft/launch/: classpath.rs  game_arguments.rs  launcher.rs
src-tauri/src/minecraft/modloader/: mod.rs  neoforge_installer.rs
src-tauri/src/state/: config_state.rs  discord_state.rs  event_state.rs  mod.rs  norisk_packs_state.rs  norisk_versions_state.rs  process_state.rs  profile_state.rs  state_manager.rs
src-tauri/src/utils/: debug_utils.rs  download_utils.rs  file_utils.rs  hash_utils.rs  java_detector.rs  mc_utils.rs  migration_utils.rs  mod.rs  path_utils.rs  profile_utils.rs  repair_utils.rs  trash_utils.rs  updater_utils.rs  world_utils.rs
src-tauri/tests/: mrpack_test.rs  mrpack_tests.rs
src/components/: ColorPicker.tsx  RadiusPicker.tsx  ThemeInitializer.tsx
src/data/: mock-data.ts  versions-data.ts
src/hooks/: useConfirmDialog.tsx  useGlobalDragAndDrop.ts  useLocalContentManager.ts  useModrinthInstaller.ts
src/lib/: icon-utils.ts  router.tsx
src/services/: cape-service.ts  content-service.ts  flagsmith-service.ts  launcher-config-service.ts  log-service.ts  minecraft-auth-service.ts  minecraft-skin-service.ts  modrinth-service.ts  nrc-service.ts  process-service.ts  profile-service.ts  world-service.ts
src/store/: appStore.ts  background-effect-store.ts  content-store.ts  crash-modal-store.ts  minecraft-auth-store.ts  profile-store.ts  quality-settings-store.ts  useCapeFavoritesStore.ts  useThemeStore.ts
src/styles/: globals.css
src/types/: content.ts  events.ts  launcherConfig.ts  localSkin.ts  minecraft.ts  (+6 more)
(+106 files in other folders)
